*WolkGateway RELEASE NOTES**
--------------------------

*WolkAbout Technology s.r.o.*

WolkGateway bridges communication between WolkAbout IoT platform and multiple devices connected to it.

**Version 5.1.0-prerelease**
	- [IMPROVEMENT] - Added the APT/SystemD firmware update mechanism.

**Version 5.0.0-prerelease**
    - [REWORK] - Updated the WolkGateway to be ready for Wolkabout IoT Platform 22.GA - The Digital Twin Update
    - [IMPROVEMENT] - Fixed the CMakeLists.txt file for private header file finding to use project files in private

**Version 4.4.0**
    - [IMPROVEMENT] - Completely removed `libpoco` as a dependency, and now rely on `sqlite` for SQLiteDeviceRepository.

**Version 4.3.2**
    - [BUGFIX] - Fixed how the gateway sends out `subdevice_status` messages that used to confuse the platform.

**Version 4.3.1**
    - [IMPROVEMENT] - Implemented sending of `p2d/connection_status` message to the local broker, to announce platform connection state to the modules.

**Version 4.3.0**
    - [IMPROVEMENT] - Created WolkDefault and WolkExternal that provide different interfaces for custom subdevice data providing.
    - [IMPROVEMENT] - Introduced the FSFileRepository to provide info about FileManagement files from the File System.
    - [IMPROVEMENT] - Disabled the Gateway Update message sending and mechanisms as they have been found unnecessary.
    - [IMPROVEMENT] - Imported the newest WolkSDK-Cpp that introduces various fixes and improvements.
    - [IMPROVEMENT] - Moved the version file when firmware installing to a different location. Also, finishing the install method with `true` now reports success.
    - [IMPROVEMENT] - Introduced the custom data and device status protocols, that allow us to define custom MQTT topics/payloads for those messages.
    - [IMPROVEMENT] - Added the FileListener interface for FileManagementService to allow input into the File Management process and allow for hooks.