@@ -1,5 +1,6 @@
 wolkgateway (5.1.0-prerelease) stable; urgency=medium
 
     * Added the APT/SystemD firmware update mechanism.
+    * Added the docker images to be built when running the `tools/make_release.sh` script.
   
  -- Wolkabout ELab <elab@wolkabout.com>  Mon, 7 Mar 2022 00:00:00 +0100
