@@ -7,6 +7,7 @@ WolkGateway bridges communication between WolkAbout IoT platform and multiple de
 
 **Version 5.1.0-prerelease**
 	- [IMPROVEMENT] - Added the APT/SystemD firmware update mechanism.
+	- [IMPROVEMENT] - Added the docker images to be built when running the `tools/make_release.sh` script.
 
 **Version 5.0.0-prerelease**
     - [REWORK] - Updated the WolkGateway to be ready for Wolkabout IoT Platform 22.GA - The Digital Twin Update
